<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="note_next">next</string>
    <string name="previous">previous</string>
    <string name="send_as_email">Send as email</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main">NoteKeeper</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NoteKeeper</string>
    <string name="nav_header_subtitle">Short notes for Pluralsight</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="nav_notes">Notes</string>
    <string name="nav_courses">Courses</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="help_amp_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="settings">Settings</string>
    <string name="pref_display_name">Your Name</string>
    <string name="pref_display_name_title">Display Name</string>
    <string name="pref_social_network">Favorite Social Network</string>
    <string name="email_address_title">Email Address</string>
    <string name="email_default_value">your.name@host.com</string>
</resources>
