<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/nav_notes" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_courses"
            android:title="@string/nav_courses" />

    </group>


    <group android:id="@+id/grp2">
        <item android:title="@string/settings"
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"

            />
        <item android:title="@string/help_amp_feedback"
            android:id="@+id/help_feedback"
            android:icon="@drawable/ic_help_black_24dp"/>
    </group>


</menu>
